apps/dev/glance/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - image: glanceapp/glance:latest
          name: glance
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: glance-config-volume
              mountPath: /app/config
      volumes:
        - name: glance-config-volume
          configMap:
            name: glance-config
      restartPolicy: Always
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 25%
        maxSurge: 25%
